# Gemma4-Cerebras-hackathon-droneguard

./: .env.example  .gitignore  IDEA.md  IDEA_PLAN.md  README.md  package-lock.json  package.json  pyproject.toml
data/runs/: run_20260628_190246_987d8f0d.jsonl
data/samples/: README.md  scenarios.json
data/samples/alexanderplatz/: telemetry.csv
data/samples/dangerous/: telemetry.csv
data/samples/safe/: telemetry.csv
docs/: ARCHITECTURE.md  CEREBRAS_INTEGRATION.md  CEREBRASxGEMMA.md  DATA_CONTRACTS.md  DEMO_RUNBOOK.md  HACKATHON_PLAN.md  README.md  WEB_APP_AND_OBSERVABILITY.md
scripts/: README.md  generate_sample_assets.py
src/droneguard_multiverse/: README.md  __init__.py  config.py  paths.py
src/droneguard_multiverse/agents/: README.md  __init__.py  commander.py  common.py  telemetry.py  vision.py
src/droneguard_multiverse/api/: README.md  __init__.py  routes.py
src/droneguard_multiverse/cache/: README.md  __init__.py  keys.py  replay.py
src/droneguard_multiverse/observability/: README.md  __init__.py  events.py  langsmith.py  phoenix.py  trace_store.py
src/droneguard_multiverse/orchestration/: README.md  __init__.py  run.py
src/droneguard_multiverse/schemas/: README.md  __init__.py  agents.py  scenario.py  telemetry.py
src/droneguard_multiverse/simulation/: README.md  __init__.py  reachability.py  route.py
src/droneguard_multiverse/ui/: README.md
tests/: README.md  test_cache_agents_and_orchestration.py  test_scenarios_and_telemetry.py
web/: README.md  app.js  demo.css  demo.html  demo.js  index.html  styles.css
(+17 files in other folders)
